2021-1122 2更：前台首頁、內頁標題異動，form表單新增

--- a/form.htm
+++ b/form.htm
@@ -292,10 +292,28 @@
                                         <div class="form_content">
                                             <div class="flex-col-equal-2">
                                                 <div class="form_grp">
-                                                    <label for="" class="form_title" aria-required="true">2-1 input</label>
+                                                    <label for="" class="form_title" aria-required="true">2-1 input 電話樣式2</label>
                                                     <div class="form_content">
-                                                        <input name="username" id="inputSample" type="text" placeholder="請輸入文字">
-                                                        <div class="notice">一般提醒訊息</div>
+                                                        <div class="flex-3-6-3 tel_type2">
+                                                            <div class="form_grp">
+                                                                <div class="form_content">
+                                                                    <input name="username" id="inputSample" type="text" placeholder="區碼">
+                                                                    <div class="notice">一般提醒訊息</div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="form_grp">
+                                                                <div class="form_content">
+                                                                    <input name="username" id="inputSample" type="text" placeholder="號碼">
+                                                                    <div class="notice">一般提醒訊息</div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="form_grp">
+                                                                <div class="form_content extension" >
+                                                                    <input name="username" id="inputSample" type="text" placeholder="分機">
+                                                                    <div class="notice">一般提醒訊息</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="form_grp">
@@ -490,6 +508,36 @@
                                         <div class="checkbox gaze">
                                             <label><input type="checkbox"><span>同紙本簡表</span></label>
                                             <label><input type="checkbox"><span>同戶籍地址</span></label>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
+                                        <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>地址 3</label>
+                                        <div class="form_content form_inline address_type2">
+                                            <div>
+                                                <select name="" id="">
+                                                    <option value="">台北市</option>
+                                                    <option value="">新北市</option>
+                                                    <option value="">桃園市</option>
+                                                    <option value="">新竹市</option>
+                                                    <option value="">...</option>
+                                                </select>
+                                                <select name="" id="">
+                                                    <option value="">中正區</option>
+                                                    <option value="">大安區</option>
+                                                    <option value="">信義區</option>
+                                                    <option value="">北投區</option>
+                                                    <option value="">...</option>
+                                                </select>
+                                                <select name="" id="">
+                                                    <option value="">ＯＯ村</option>
+                                                    <option value="">ＸＸ里</option>
+                                                    <option value="">...</option>
+                                                </select>
+                                                <input name="username" type="text" class="Vil" placeholder="村/里">
+                                                <input name="username" type="text" class="Neighborhood" placeholder="">鄰
+                                                <input name="username" type="text" class="user_typing" placeholder="地址">
+                                            </div>
+                                            <div class="notice_info">詳細地址：user_typing</div>
                                         </div>
                                     </div>
                                     <!-- checkbox -->
