--- a/login.htm
+++ b/login.htm
@@ -119,7 +119,7 @@
                 <div class="container">
                     <div class="col">
                         <div class="login_title">
-                            <h2 class="main-title">旅行社團件<span>申辦護照系統</span></h2>
+                            <h2 class="main-title">旅行社團件申辦護照<span>網路填表及照片上傳系統</span></h2>
                             <p>歡迎使用外交部領事事務局旅行社團件申辦護照系統，<br>本服務提供旅行社使用自然人憑證登入，<br>並依指定格式批次上傳簡式護照資料及上傳數位照片。</p>
                         </div>
                         <!-- 憑證PIN碼 -->
