--- a/page.htm
+++ b/page.htm
@@ -42,7 +42,7 @@
                 </nav>
                 <!-- navigation End -->
                 <h1>
-                    <a href="index.htm"><img src="images/logo.png" alt="外交部領事事務局護照預約申請" /><span>旅行社團件<b>申辦護照系統</b></span></a>
+                    <a href="index.htm"><img src="images/logo.png" alt="外交部領事事務局護照預約申請" /><span>旅行社團件申辦護照<b>網路填表及照片上傳系統</b></span></a>
                 </h1>
                 <!-- noscript -->
                 <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+ (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←) 快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
