2021-1123 3更：lp頁更新css連結

--- a/lp.htm
+++ b/lp.htm
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
-    <!-- hyUI css -->
-    <link rel="stylesheet" href="css/hyui.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/boca_personal.css">ㄋ
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
 </head>
