--- a/foto.htm
+++ b/foto.htm
@@ -120,7 +120,7 @@
                             <!-- 照片上傳 - 通過 -->
                             <div class="foto-upload">
                                 <div class="foto">
-                                    <img src="images/foto-pass.svg" alt="">
+                                    <img src="images/foto-pass.jpg" alt="">
                                 </div>
                                 <div class="info">
                                     <ol>
