--- a/index.htm
+++ b/index.htm
@@ -257,6 +257,11 @@
                         <td>旅行社送件單</td>
                         <td><a href="pdf_3.html" target="_blank"></a></td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>旅行社簡表</td>
+                        <td><a href="pdf_4.html" target="_blank"></a></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
