--- a/pdf_2.html
+++ b/pdf_2.html
@@ -50,7 +50,7 @@
                     <tr>
                         <th width="20%">身分證字號</th>
                         <td width="55%" colspan="2">A123456789</td>
-                        <td width="25%" rowspan="3" class="foto" height="220"><b>照片浮貼處<span class="note">注意：相片請另詳參外交部領事事務局「晶片護照相片規格」</span></b></td>
+                        <td width="25%" rowspan="3" class="foto" height="220"><img src="images/foto-pass.jpg" alt=""></td>
                     </tr>
                     <tr>
                         <th width="20%">姓    名</th>
