--- a/form.htm
+++ b/form.htm
@@ -635,6 +635,41 @@
                                             <div class="notice_info">一般提醒訊息</div>
                                         </div>
                                     </div>
+                                    <div class="form_grp">
+                                        <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>標題 10 送件單位</label>
+                                        <div class="form_content form_inline incr_dec">
+                                            <section class="item">
+                                                <select id="selectSample" name="">
+                                                    <option value="">請選擇</option>
+                                                    <option value="">項目一</option>
+                                                    <option value="">項目二</option>
+                                                    <option value="">項目三</option>
+                                                </select>
+                                                <!-- <button type="button" class="btn btn-primary">button按鈕</button> -->
+                                            </section>
+                                            <section class="item">
+                                                <select id="selectSample" name="">
+                                                    <option value="">請選擇</option>
+                                                    <option value="">項目一</option>
+                                                    <option value="">項目二</option>
+                                                    <option value="">項目三</option>
+                                                </select>
+                                                <button type="button" class="btn btn-delete"><i class="i_close"></i>移除</button>
+                                            </section>
+                                            <section class="item">
+                                                <select id="selectSample" name="">
+                                                    <option value="">請選擇</option>
+                                                    <option value="">項目一</option>
+                                                    <option value="">項目二</option>
+                                                    <option value="">項目三</option>
+                                                </select>
+                                                <button type="button" class="btn btn-delete"><i class="i_close"></i>移除</button>
+                                            </section>
+                                        </div>
+                                        <div class="btn_grp">
+                                            <button type="button" class="btn btn-primary">新增送件單位</button>
+                                        </div>
+                                    </div>
                                     <!-- 檔案上傳 -->
                                     <div class="form_grp">
                                         <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>單檔上傳</label>
