--- a/pdf_4.html
+++ b/pdf_4.html
@@ -72,6 +72,7 @@
                 <div class="note">送件旅行社<br>請於本欄蓋章</div>
                 <time>填表日期：<span>110年10月10日</span><span>12:59:59</span></time>
                 <img src="images/bar_code.jpg" alt="">
+                <div class="">條碼的編號</div>
             </div>
         </div>
         <!-- <div class="flex">
