2021-1209 頁面新增異動

--- a/index.htm
+++ b/index.htm
@@ -250,7 +250,10 @@
                     <tr>
                         <td></td>
                         <td>簡式護照資料表</td>
-                        <td><a href="pdf_2.html" target="_blank"></a></td>
+                        <td>
+                            <a href="pdf_2.html" target="_blank"></a><br>
+                            <a href="pdf_2-2.html" target="_blank"></a>
+                        </td>
                     </tr>
                     <tr>
                         <td></td>
@@ -260,7 +263,10 @@
                     <tr>
                         <td></td>
                         <td>旅行社簡表</td>
-                        <td><a href="pdf_4.html" target="_blank"></a></td>
+                        <td>
+                            <a href="pdf_4.html" target="_blank"></a><br>
+                            <a href="pdf_4-2.html" target="_blank"></a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
