--- a/pdf_1.html
+++ b/pdf_1.html
@@ -50,7 +50,7 @@
                     </tr>
                     <tr>
                         <th width="20%">外文姓名<span>(姓在前，名在後，<br>並以「，」區隔)</span></th>
-                        <td width="55%" colspan="2" class="foreign_name">123<span>倘外文姓名有特別需求，請於備註欄敘明原因，並簽名具結</span></td>
+                        <td width="55%" colspan="2" class="foreign_name">123<span class="focus">倘外文姓名有特別需求，請於備註欄敘明原因，並簽名具結</span></td>
                     </tr>
                     <tr>
                         <th width="20%">外文別名<span>(非必要填寫)</span></th>
