--- a/pdf_4-2.html
+++ b/pdf_4-2.html
@@ -79,4 +79,66 @@
             </div>
         </div>
     </section>
+    <section class="PDF">
+        <div class="flex">
+            <time>填表日期：<span>110年10月10日</span><span>12:59:59</span></time>
+            <img src="images/bar_code.jpg" alt="">
+            <div class="">條碼的編號</div>
+        </div>
+        <div class="title">
+            <h2>簡式護照資料表</h2>
+            <p class="focus">旅行社團件申請護照專用</p>
+        </div>
+        <section>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>申辦類型</th>
+                        <td colspan="3" class="">
+                            <div class="col clear"><input type="checkbox" name="" value=""><b>首次辦理<span>(限已完成人別確認，並須檢附戶所核章之簡式護照資料表)</span></b></div>
+                            <div class="col clear"><input type="checkbox" name="" value="" checked><b>換發護照</b></div>
+                            <div class="col clear"><input type="checkbox" name="" value=""><b>遺失補發護照</b></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th width="20%" height="42">辦理方式</th>
+                        <td width="80%"><b>委任代辦（須另附委任書或法定代理關係證明）</b></td>
+                    </tr>
+                    <tr>
+                        <th height="42">身分證字號</th>
+                        <td>A987654321</td>
+                    </tr>
+                    <tr>
+                        <th height="42">出生年月日</th>
+                        <td>民國 097 年 02 月 12 日</td>
+                    </tr>
+                    <tr>
+                        <th height="42">姓名</th>
+                        <td>林慧玲</td>
+                    </tr>
+                    <tr>
+                        <th height="42">外文姓名</th>
+                        <td>同舊護照</td>
+                    </tr>
+                    <tr>
+                        <th height="60">外文別名</th>
+                        <td>LIN,HUI-LING</td>
+                    </tr>
+                    <tr>
+                        <th height="60">備註欄</th>
+                        <td></td>
+                    </tr>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <div class="flex-type-1">
+            <div class="col">
+                <img src="images/foto-pass.jpg" alt="">
+            </div>
+            <div class="col">
+                <div class="note">送件旅行社<br>請於本欄蓋章</div>
+            </div>
+        </div>
+    </section>
 </body>
