--- a/form-beta.htm
+++ b/form-beta.htm
@@ -202,6 +202,25 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="form_grp" role="group" aria-labelledby="fake-legend">
+                                        <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>radio：</label>
+                                        <div class="form_content" id="fake-legend">
+                                            <div class="radio_grp">
+                                                <label><input type="radio" name="sampleRadio1" value="" checked="">新北市</label>
+                                                <label><input type="radio" name="sampleRadio1" value="">臺北市</label>
+                                                <label><input type="radio" name="sampleRadio1" value="">臺中市</label>
+                                                <label><input type="radio" name="sampleRadio1" value="">
+                                                    <span>
+                                                        特殊情況，如果 radio 後面又要加 input，就整個再用 span 包起來，沒有要加東西的話，就不用包 span
+                                                        <input name="text" id="inputSample" type="text" placeholder="">
+                                                    </span>
+                                                </label>
+                                                <label><input type="radio" name="sampleRadio1" value="">高雄市</label>
+                                                <label><input type="radio" name="sampleRadio1" value="">宜蘭縣</label>
+                                                <label><input type="radio" name="sampleRadio1" value="">新竹縣</label>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <!-- checkbox -->
                                     <div class="form_grp" role="group" aria-labelledby="fake-legend">
                                         <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>checkbox：</label>
