--- a/form.htm
+++ b/form.htm
@@ -35,8 +35,33 @@
             <ul>
                 <li>無序清單</li>
                 <li>項目1</li>
-                <li>項目2</li>
+                <li><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem corrupti dolorum iure magni quia ratione cupiditate fugit molestias perspiciatis quaerat a sequi modi qui consequuntur atque praesentium, odit quibusdam. Ab.</a></li>
             </ul>
+
+            <div class="flex-form">
+                <!-- radio -->
+                <div class="form_grp" role="group" aria-labelledby="fake-legend">
+                    <div class="radio_grp ">
+                        <label><input type="radio" name="sampleRadio" value="" checked="">新北市</label>
+                        <label><input type="radio" name="sampleRadio" value="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem corrupti dolorum iure magni quia ratione cupiditate fugit molestias perspiciatis</label>
+                        <label><input type="radio" name="sampleRadio" value="">臺北市<input name="text" id="inputSample" type="text" placeholder=""></label>
+                        <label><input type="radio" name="sampleRadio1" value="">
+                            <span>
+                                特殊情況，如果 radio 後面又要加 input，就整個再用 span 包起來。不包的話就會像上面一樣擠在一起。
+                                <input name="text" id="inputSample" type="text" placeholder="">
+                            </span>
+                        </label>
+                    </div>
+                </div>
+                <!-- checkbox-->
+                <div class="form_grp" role="group" aria-labelledby="fake-legend">
+                    <div class="check_grp">
+                        <label><input type="checkbox" name="" value="" checked="">全部</label>
+                        <label><input type="checkbox" name="" value="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem corrupti dolorum iure magni quia ratione cupiditate fugit molestias perspiciatis quaerat a sequi modi qui consequunt</label>
+                        <label><input type="checkbox" name="" value="">表演與節慶</label>
+                    </div>
+                </div>
+            </div>
 
             <section class="center_box">
                 <p>送件地點</p>
@@ -590,6 +615,8 @@
                                                         <option value="">項目3</option>
                                                     </select>
                                                 </div>
+                                                <label><input type="checkbox" name="" value="">項目5<span>（備註文字）</span></label>
+                                                <label><input type="checkbox" name="" value="" disabled="">項目5<span>（備註文字）</span></label>
                                                 <label><input type="checkbox" name="" value="" checked="" disabled="">項目5<span>（備註文字）</span></label>
                                             </div>
                                         </div>
