--- a/lp.htm
+++ b/lp.htm
@@ -166,7 +166,7 @@
                                         <section class="flex-col-equal-2">
                                             <div class="grp">
                                                 <div class="title"><span>主標題 1：單層標題、雙欄</span></div>
-                                                <div class="content">&nbsp;</div>
+                                                <div class="content"></div>
                                             </div>
                                             <div class="grp">
                                                 <div class="title"><span>主標題 2：單層標題、雙欄</span></div>
