2022-0214 td 新增 左 class Name

--- a/lp_table.htm
+++ b/lp_table.htm
@@ -358,6 +358,25 @@
                                     </tr>
                                 </table>
 
+                                <h5>Table NO. 3 項目靠左</h5>
+                                <table>
+                                    <tr>
+                                        <th>序號</th>
+                                        <th>送件編號</th>
+                                        <th>列印送件單</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td class="text-left">0000A20211012AMNC01</td>
+                                        <td><a href="#" class="tb-print">列印</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td class="text-left"><a href="#">0000A20211012AMNC01</a></td>
+                                        <td><a href="#" class="tb-print">列印</a></td>
+                                    </tr>
+                                </table>
+
                                 <h5>Table NO. 4</h5>
                                 <table>
                                     <tr>
