2022-0218 table td border-bottom 無規則自行加粗 debug 測試

--- a/lp_table.htm
+++ b/lp_table.htm
@@ -234,6 +234,69 @@
                                         <td>td 資料</td>
                                         <td>td 資料</td>
                                     </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>4</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>5</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>6</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>7</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>8</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>9</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td>10</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                        <td>td 資料</td>
+                                    </tr>
                                 </table>
 
                                 <h5>Table NO. 1</h5>
