2022-0304 form 表單 debug

--- a/form.htm
+++ b/form.htm
@@ -148,11 +148,17 @@
                                     <li>有序清單</li>
                                     <li>項目1</li>
                                     <li>項目2</li>
+                                    <li>項目3項目3<a href="#">連結</a>項目3項目3項目3項目3項目3項目3項目3項目3項目3項目3項目3項目3</li>
+                                    <li><a href="#">連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結</a></li>
+                                    <li>項目4</li>
                                 </ol>
                                 <ul>
                                     <li>無序清單</li>
                                     <li>項目1</li>
                                     <li>項目2</li>
+                                    <li>項目3項目3<a href="#">連結</a>項目3項目3項目3項目3項目3項目3項目3項目3項目3項目3項目3項目3</li>
+                                    <li><a href="#">連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結連結</a></li>
+                                    <li>項目4</li>
                                 </ul>
                             </div>
                             <!-- 表單 -->
@@ -165,6 +171,36 @@
                                                 <label for="" class="form_title" aria-required="true"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">必填</abbr>input 1：</label>
                                                 <div class="form_content">
                                                     <input type="text" id="" placeholder="請輸入文字">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
+                                        <div class="flex-col-equal-1">
+                                            <div class="form_grp">
+                                                <label for="" class="form_title" aria-required="true">必填</abbr>input 1：</label>
+                                                <div class="form_content">
+                                                    <input type="text" id="" placeholder="請輸入文字" value="這裡有輸入文字">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
+                                        <div class="flex-col-equal-1">
+                                            <div class="form_grp">
+                                                <label for="" class="form_title" aria-required="true">input 1：</label>
+                                                <div class="form_content">
+                                                    <input type="text" id="" placeholder="請輸入文字" value="這裡有輸入文字但 readonly" readonly>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_grp">
+                                        <div class="flex-col-equal-1">
+                                            <div class="form_grp">
+                                                <label for="" class="form_title" aria-required="true">input 1：</label>
+                                                <div class="form_content">
+                                                    <input type="text" id="" placeholder="請輸入文字" value="這裡有輸入文字但 disabled" disabled>
                                                 </div>
                                             </div>
                                         </div>
@@ -695,6 +731,9 @@
                                         </div>
                                         <div class="btn_grp">
                                             <button type="button" class="btn btn-primary">新增送件單位</button>
+                                        </div>
+                                        <div class="btn_grp">
+                                            <button type="button" class="btn btn-primary">按鈕文字很長很長123按鈕文字很長很長按456鈕文字很長很長789</button>
                                         </div>
                                     </div>
                                     <!-- 檔案上傳 -->
