--- a/lp_table.htm
+++ b/lp_table.htm
@@ -208,7 +208,7 @@
                                         <th>檢視</th>
                                     </tr>
                                     <tr>
-                                        <td><input type="checkbox" name="" value="" checked></td>
+                                        <td><input type="checkbox" name="" value=""></td>
                                         <td>1</td>
                                         <td><a href="#" class="tb-edit">編輯</a></td>
                                         <td><a href="#" class="tb-edit">編輯</a></td>
@@ -217,7 +217,7 @@
                                         <td><a href="#" class="tb-view">檢視</a></td>
                                     </tr>
                                     <tr>
-                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td><input type="checkbox" name="" value="" checked></td>
                                         <td>2</td>
                                         <td>td 資料</td>
                                         <td>td 資料</td>
@@ -262,7 +262,7 @@
                                         <td>td 資料</td>
                                     </tr>
                                     <tr>
-                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td><input type="checkbox" name="" value=""></td>
                                         <td>7</td>
                                         <td>td 資料</td>
                                         <td>td 資料</td>
@@ -271,7 +271,7 @@
                                         <td>td 資料</td>
                                     </tr>
                                     <tr>
-                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td><input type="checkbox" name="" value=""></td>
                                         <td>8</td>
                                         <td>td 資料</td>
                                         <td>td 資料</td>
@@ -280,7 +280,7 @@
                                         <td>td 資料</td>
                                     </tr>
                                     <tr>
-                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td><input type="checkbox" name="" value=""></td>
                                         <td>9</td>
                                         <td>td 資料</td>
                                         <td>td 資料</td>
@@ -289,7 +289,7 @@
                                         <td>td 資料</td>
                                     </tr>
                                     <tr>
-                                        <td><input type="checkbox" name="" value="" disabled></td>
+                                        <td><input type="checkbox" name="" value=""></td>
                                         <td>10</td>
                                         <td>td 資料</td>
                                         <td>td 資料</td>
